# embedded_rust_template

./: Cargo.toml  README.md  memory.x  openocd.cfg  openocd.gdb
src/: main.rs
