[package]
name = "embedded_rust_template"
version = "0.1.0"
authors = ["Tobias Sprenger <tobias.sprenger@stud.h-da.de>"]
description = "Embedded Rust Template for Master Thesis about Embedded Rust"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cortex-m-rt crate contains all the required parts to build a no_std application (binary crate) that targets a Cortex-M microcontroller
cortex-m-rt = "0.7.1"	

# cortex-m crate provides low level access to Cortex-M processors
cortex-m = "0.7.4"

# Semihosting for ARM Cortex-M processors
cortex-m-semihosting = "0.3.7"

# uncomment if you want to use the HAL
# stm32f4xx-hal = { version = "0.12.0", features = ["stm32f446"] }
# stm32f3xx-hal = { version = "0.9.0", features = ["stm32f303"] }


panic-halt = "0.2.0"


# this lets you use `cargo fix`
[[bin]]
name = "embedded_rust_template"
path = "src/main.rs"
test = false
bench = false

[profile.release]
codegen-units = 1	# better optimizations
debug = true 		# symbols are nice and they don't increase the size on Flash
lto = true 		# better optimizations
